# DJINN

./: .gitignore  .pre-commit-config.yaml  CREDITS.md  README.md  compare_results.py  pyproject.toml  pytest.ini  results_tf.json  run_and_collect.py  setup.cfg  setup.py  setup_envs.sh
.github/workflows/: ci.yml  comparison.yml  docs.yml  formatting.yml  tests.yml
djinn/: __init__.py  djinn.py  djinn_fns.py  main.py  neural_network.py  random_forest.py
docs/: conf.py  djinn.rst  djinn_license.rst  index.rst  install.rst
examples/: djinn_classification_example.py  djinn_multiout_example.py  djinn_regression_example.py
tests/: conftest.py  test_neural_network.py  test_random_forest.py  test_tf_comparison.py  test_unit.py  test_unit_shared.py
