[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djinnml"
version = "1.0"
description = "Deep Jointly-Informed Neural Networks"
requires-python = ">=3.7, <4"
license = { text = "LLNL" }
authors = [ { name = "Kelli Humbird", email = "humbird1@llnl.gov" } ]
maintainers = [ { name = "Ben Whewell", email = "ben.whewell@pm.me" } ]
keywords = ["regression", "neural networks", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "torch>=1.8",
    "scipy",
    "scikit-learn>=0.21",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/bwhewe-13/DJINN"
Upstream = "https://github.com/LLNL/djinn"
Homepage = "https://github.com/LLNL/djinn"

[project.optional-dependencies]
testing = ["nose", "nose-cover3"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=djinnml --cov-report=html --cov-report=xml"
testpaths = ["tests"]
