[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djinnml"
version = "1.0"
description = "Deep Jointly-Informed Neural Networks"
requires-python = ">=3.8, <4"
license = { text = "LLNL" }
authors = [ { name = "Kelli Humbird", email = "humbird1@llnl.gov" } ]
maintainers = [ { name = "Ben Whewell", email = "ben.whewell@pm.me" } ]
keywords = ["regression", "neural networks", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "torch>=1.8",
    "scipy",
    "scikit-learn>=1.0",
]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Repository = "https://github.com/bwhewe-13/DJINN"
Upstream = "https://github.com/LLNL/djinn"
Homepage = "https://github.com/LLNL/djinn"

[project.optional-dependencies]
testing = ["pytest>=7", "pytest-cov"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["djinn*"]
